<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="hasShows"
            type="boolean" />

        <variable
            name="errorMessage"
            type="String" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_700"
        tools:context=".ui.showlist.ShowListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="@integer/show_grid_span_count"
            tools:listitem="@layout/show_list_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:isGone="@{hasShows}">

            <TextView
                android:id="@+id/tvEmptyShows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{errorMessage}"
                android:textAppearance="?attr/textAppearanceHeadline5" />

        </LinearLayout>
    </FrameLayout>
</layout>